# MaquinaSimpletron

./: CMakeLists.txt  Simpletron.cpp  Simpletron.h  TablaSimbolos.cpp  TablaSimbolos.h  evaluarPostfijo.cpp  evaluarPostfijo.h  instrucciones.h  main.cpp  postfijo.cpp  utils.cpp  utils.h
Compilador/: Compilador.cpp  Compilador.h  TablaSimbolos.cpp  TablaSimbolos.h  evaluarPostfijo.cpp  evaluarPostfijo.h  main.cpp  postfijo.cpp  type.h  utils.cpp  utils.h
